[package]
name = "dodo-longpolling-service"
version = "0.1.0"
authors = ["rusty <rusty@spoqa.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
configer = { version = "0.10.1", package = "config", features = ["toml"] }
futures = "0.3.5"
http-api-problem = { version = "0.17.0", features = ["with-warp"] }
log = "0.4.8"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "sync"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
simple_logger = "1.6.0"
structopt = "0.3.15"
url = { version = "2.1.1", features = ["serde"] }
warp = "0.2.3"

bb8 = { git = "https://github.com/khuey/bb8" }
bb8-redis = { git = "https://github.com/khuey/bb8" }
redis = { git = "https://github.com/pbzweihander/redis-rs", branch = "tmp-0.16.1" }

[patch.crates-io]
redis = { git = "https://github.com/pbzweihander/redis-rs", branch = "tmp-0.16.1" }
